# byte_marks

./: Cargo.toml  README.md  msg_empty.txt
src/: .bytemarker.rs.swp  .marked.rs.swp  byte_marks  byte_tail  bytemarker.rs  bytemarks.rs  lib.rs  marked.rs
tests/: empty.rs  example.rs  file_with_mark_at_end.txt  file_with_multiple_marks_at_end.txt  multi-msg.rs  multi-msg.txt  random-msg.rs  single-msg.rs  single-msg.txt
