[package]
name = "byte_marks"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "AGPL-3.0-or-later"
description = "A rust lib crate to mark/unmark transmitted/received byte boundaries for messa
ges."
repository = "https://github.com/ratulb/byte_marks"

[dependencies]
lazy_static = "1.4.0"
