[package]
name = "byte_marks"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "AGPL-3.0-or-later"
description = "A rust crate to mark/unmark/recover transmitted/received bytes across the wire."
repository = "https://github.com/ratulb/byte_marks"

[dependencies]
lazy_static = "1.4.0"
[dev-dependencies]
rand = "0.8.4"
